--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/stag_ros
-	previous = 
-	base = d0c4939
+	previous = d0c4939
+	base = c9846e9
 	trim = 
 	trimbase = 
