--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/stag_ros
-	previous = 
-	base = e91c578
+	previous = e91c578
+	base = 4f11943
 	trim = 
 	trimbase = 
