--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/stag_ros
-	previous = 
-	base = dfc661c
+	previous = dfc661c
+	base = 38c8c9e
 	trim = 
 	trimbase = 
