--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/stag_ros
-	previous = 
-	base = 66b516c
+	previous = 66b516c
+	base = cb6399e
 	trim = 
 	trimbase = 
