Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.4-1": ["Tue Nov 17 2020", "Brennan Cain", "bscain@email.sc.edu"]}
+{"0.3.4-2": ["Tue Nov 17 2020", "Brennan Cain", "bscain@email.sc.edu"], "0.3.4-1": ["Tue Nov 17 2020", "Brennan Cain", "bscain@email.sc.edu"]}
