Imported upstream version '0.3.6' of 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,7 @@ install(FILES stag_nodelet.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-install(DIRECTORY cfg launch bags
+install(DIRECTORY cfg launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
