--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>stag_ros</name>
-  <version>0.3.6</version>
+  <version>0.3.7</version>
   <description>The stag_ros package</description>
+
+  <url type="repository">https://github.com/usrl-uofsc/stag_ros</url>
+  <url type="bugtracker">https://github.com/usrl-uofsc/stag_ros/issues</url>
+  <url type="website">http://wiki.ros.org/stag_ros</url>
 
   <maintainer email="bscain@email.sc.edu">Brennan Cain</maintainer>
   <maintainer email="michailk@email.sc.edu">Michail Kalaitzakis</maintainer>
@@ -19,7 +23,6 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>nodelet</build_depend>
-  <build_depend>swri_nodelet</build_depend>
   <build_export_depend>camera_info_manager</build_export_depend>
   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
