--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4e33bb5
+	base = 7d10eef
 	trimbase = 
 	parent = release/melodic/stag_ros
-	previous = 
+	previous = 4e33bb5
