--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 92e2077
+	base = d28c67b
 	trimbase = 
 	parent = debian/melodic/stag_ros
-	previous = 
+	previous = 92e2077
