--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6dec95a
+	base = d12db53
 	trimbase = 
 	parent = release/kinetic/stag_ros
-	previous = 
+	previous = 6dec95a
