--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b75f704
+	base = 1809c39
 	trimbase = 
 	parent = debian/kinetic/stag_ros
-	previous = 
+	previous = b75f704
