Rebase from 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
   cv_bridge
   geometry_msgs
   image_transport
+  message_generation
   nodelet
   roscpp
   sensor_msgs
@@ -23,10 +24,23 @@ find_package(catkin REQUIRED COMPONENTS
   tf
 )
 
+## Custom message files to be created
+add_message_files(DIRECTORY msg
+  FILES
+  STagMarker.msg
+  STagMarkerArray.msg
+)
+
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  geometry_msgs
+)
+
 catkin_package(
   INCLUDE_DIRS include src/stag
   LIBRARIES stag_ros
-  CATKIN_DEPENDS camera_info_manager cv_bridge geometry_msgs image_transport nodelet roscpp sensor_msgs std_msgs
+  CATKIN_DEPENDS camera_info_manager cv_bridge geometry_msgs image_transport message_generation message_runtime nodelet roscpp sensor_msgs std_msgs
 )
 
 include_directories(
@@ -59,26 +73,27 @@ add_library(stag_core
   src/stag/ED/LineSegment.cpp
   src/stag/ED/MyMath.cpp
   src/stag/ED/NFA.cpp
-#  src/stag/ED/Utilities.cpp
   src/stag/ED/ValidateEdgeSegments.cpp
-        include/stag_ros/load_yaml_tags.h)
+)
 
 add_library(stag_nodelet
-        src/stag_ros/stag_nodelet.cpp
+  src/stag_ros/stag_nodelet.cpp
 )
 
 add_executable(stag_node
-        src/stag_ros/stag_node.cpp
+  src/stag_ros/stag_node.cpp
 )
 
 add_executable(stag_nodelet_runnable
-        src/stag_ros/stag_nodelet_main.cpp)
+  src/stag_ros/stag_nodelet_main.cpp)
 
 ## Dependencies
 add_dependencies(stag_nodelet
+  stag_ros_generate_messages_cpp
   ${catkin_EXPORTED_TARGETS}
 )
 add_dependencies(stag_node
+  stag_ros_generate_messages_cpp
   ${catkin_EXPORTED_TARGETS}
 )
 
@@ -94,7 +109,8 @@ target_link_libraries(stag_nodelet
 )
 
 target_link_libraries(stag_nodelet_runnable
-  stag_nodelet)
+  stag_nodelet
+)
 
 target_link_libraries(stag_node
   ${catkin_LIBRARIES}
