--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1": ["Brennan Cain", "bscain@email.sc.edu"]}
+{"0.1.2": ["Brennan Cain", "bscain@email.sc.edu"], "0.1.1": ["Brennan Cain", "bscain@email.sc.edu"]}
